docs: add schemas for responses and completes user's index
